--- a/roles/tater/templates/tater.conf.j2
+++ b/roles/tater/templates/tater.conf.j2
@@ -1,5 +1,5 @@
 [program:mongo]                                                                
-command=/home/tater/.meteor/packages/meteor-tool/.1.1.3.4sddkj++os.linux.x86_64+web.browser+web.cordova/mt-os.linux.x86_64/dev_bundle/mongodb/bin/mongod --bind_ip 127.0.0.1 --smallfiles --port 27017 --dbpath /home/tater/tater/.meteor/local/db --oplogSize 8
+command=/home/tater/.meteor/packages/meteor-tool/.1.1.4.xvre8c++os.linux.x86_64+web.browser+web.cordova/mt-os.linux.x86_64/dev_bundle/mongodb/bin/mongod --bind_ip 127.0.0.1 --smallfiles --port 27017 --dbpath /home/tater/tater/.meteor/local/db --oplogSize 8
 autostart=true                                                                 
 autorestart=unexpected                                                         
 exitcodes=1
