Fixed missing tater image on the custom error message

--- a/roles/apache/templates/custom-error-index.html.j2
+++ b/roles/apache/templates/custom-error-index.html.j2
@@ -5,7 +5,7 @@
   </head>
 <body>
   <div style="margin-top:20px; text-align:center;">
-    <img src="/deploying/eidr-logo.png">
+    <img src="/deploying/tater-logo.png">
     <p style="font-size:40px; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">Tater is being updated, please try again in a few minutes.
   </div>
   <script>
