Add addtional https listening port to accommodate DDP traffic on load balancers

--- a/roles/apache/templates/proxy.conf.j2
+++ b/roles/apache/templates/proxy.conf.j2
@@ -16,7 +16,8 @@ ServerName {{ apache_url }}
   DocumentRoot /var/www/deploying/
 </VirtualHost>
 
-<VirtualHost *:443>
+Listen 8443
+<VirtualHost *:443 *:8443>
   ProxyPreserveHost On
   RewriteEngine on
   RewriteCond %{HTTP:UPGRADE} ^WebSocket$ [NC]
