--- a/roles/tater/templates/tater.conf.j2
+++ b/roles/tater/templates/tater.conf.j2
@@ -10,7 +10,7 @@ startsecs=10
 
 [program:tater]
 command=/home/tater/.nvm/{{ nodejs_version }}/bin/node {{ tater_checkout_destination }}/bundle/main.js
-environment=METEOR_DB_NAME="{{ meteor_db_name }}",MONGO_URL="{{ meteor_mongo }}",PORT="{{ meteor_port }}",ROOT_URL="{{ root_url }}"
+environment=METEOR_DB_NAME="{{ meteor_db_name }}",MONGO_URL="{{ meteor_mongo }}",PORT="{{ meteor_port }}",ROOT_URL="{{ root_url }}",DDP_DEFAULT_CONNECTION_URL="{{ ddp_url }}"
 directory={{ tater_checkout_destination }}
 user=tater
 numprocs=1
